# LAB2_Data_platform_FoodHub

./: .dockerignore  .gitignore  Docker-compose.yml  Dockerfile  README.md  REQUIREMENTS.md  init.sql  pyproject.toml
app/: database.py  main.py  producer.py  schema.py
app/api/: recipe_routes.py
app/clients/: http_client.py  spoonacular_client.py
app/consumer/: consumer.py
app/producer/: producer.py
app/repositories/: recipe_repository.py
app/schema/internal/: recipe_schema.py  schema.py
app/schema/spoonacular/: recipe_information_schema.py  search_schema.py
app/services/: ingredient_service.py  recipe_service.py  statistics_service.py
app/transformers/: recipe_transformers.py
data/: cleaning_recipe.json  cleaning_recipe.py  flagged_recipe.py  recipes_raw.json  reicpes_raw.py
data/filtered/: search_recipe.json
docs/: sprint1_activity_log.md  sprint1_retrospective.md  sprint2_activity_log.md  sprint2_retrospective.md  sprint3_activity_log.md  sprint3_retrospective.md  sprint4_activity_log.md  sprint4_retrospective.md
frontend/static/: app.js  style.css
frontend/templates/: index.html
